@@ -16,7 +16,6 @@
 package io.kojan.mbici;
 
 import java.nio.file.Path;
-import java.nio.file.Paths;
 
 import io.kojan.mbici.execute.KubeExecuteCommand;
 import io.kojan.mbici.execute.LocalExecuteCommand;
@@ -39,7 +38,7 @@ import picocli.CommandLine.Command;
 public class Main {
     public static void main(String... args) {
         int exitCode = new CommandLine(new Main()) //
-                .registerConverter(Path.class, arg -> Paths.get(arg).toAbsolutePath()) //
+                .registerConverter(Path.class, arg -> Path.of(arg).toAbsolutePath()) //
                 .execute(args);
         System.exit(exitCode);
     }
