@@ -20,7 +20,6 @@ import java.io.IOException;
 import java.lang.ProcessBuilder.Redirect;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.nio.file.StandardOpenOption;
 import java.util.ArrayList;
 import java.util.Collections;
@@ -84,7 +83,7 @@ public class Command {
 
         Redirect logRedirect = Redirect.appendTo(logPath.toFile());
         ProcessBuilder pb = new ProcessBuilder(actualCommand);
-        pb.redirectInput(Paths.get("/dev/null").toFile());
+        pb.redirectInput(Path.of("/dev/null").toFile());
         pb.redirectOutput(logRedirect);
         pb.redirectError(logRedirect);
 
